  the JavaScript evaluator were updated to support the new format. Plural rules
  for some languages have changed, most notably Russian. Affected software
  messages have been updated and marked for review at translatewiki.net.
* (bug 14323) Redirect pages, when viewed with redirect=no, no longer hide the
  remaining page content.

=== Web API changes in 1.23 ===
* (bug 54884) action=parse&prop=categories now indicates hidden and missing
  categories.
* action=query&meta=filerepoinfo now returns additional information for each
  repo.
* action=parse&prop=languageshtml was deprecated in 1.18 and will be removed in
  MediaWiki 1.24.
* action=parse now has disabletoc flag to disable table of contents in output.
* (bug 25702) list=allcategories, list=allimages, list=alllinks, list=allpages,
  list=deletedrevs and list=filearchive did not handle case-sensitivity
  properly for all parameters.
* ApiQueryBase::titlePartToKey allows an extra parameter that indicates the
  namespace in order to properly capitalize the title part.
* (bug 57874) action=feedcontributions no longer has one item more than limit.
* All API modules now support an assert parameter. See the new features section
  for more details.

=== Languages updated in 1.23 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Support was added for Northern Luri (lrc).

=== Other changes in 1.23 ===
* The rc_type field in the recentchanges table has been superseded by a new
  rc_source field.  The rc_source field is a string representation of the
  change type where rc_type was a numeric constant.  This field is not yet
  queried but will be in a future point release of 1.22.
** Utilize update.php to create and populate this new field.  On larger wiki's
   which do not wish to update recentchanges table in one large update please